WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
223826
REGRESSION (
r275038
?): Perf test IndexedDB/stress/large-binary-keys.html failing with logging about memory pressure events
https://bugs.webkit.org/show_bug.cgi?id=223826
Summary
REGRESSION (r275038?): Perf test IndexedDB/stress/large-binary-keys.html fail...
Ryan Haddad
Reported
2021-03-26 16:16:07 PDT
REGRESSION: Catalina-Release-WK2-Perf tests failing with logging about memory pressure events: Running IndexedDB/stress/large-binary-keys.html (98 of 207) error: IndexedDB/stress/large-binary-keys.html Received memory pressure event 16 vm pressure 0 Received memory pressure event 32 vm pressure 0 FAILED Finished: 208.580084 s
https://build.webkit.org/#/builders/20/builds/416
Attachments
Patch
(2.48 KB, patch)
2021-03-26 16:29 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-03-26 16:16:23 PDT
<
rdar://problem/75906134
>
Ryan Haddad
Comment 2
2021-03-26 16:17:53 PDT
https://trac.webkit.org/changeset/275038/webkit
looks like it could have been related
Chris Dumez
Comment 3
2021-03-26 16:29:20 PDT
Created
attachment 424418
[details]
Patch
Darin Adler
Comment 4
2021-03-26 17:40:39 PDT
Comment on
attachment 424418
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=424418&action=review
> Source/WTF/ChangeLog:10 > + Use RELEASE_LOG() instead of WTFLogAlways() to log memory pressure events, so that they don't > + show on stdout in the performance tests and make them fail.
Does this still achieve what we want in production builds?
Chris Dumez
Comment 5
2021-03-26 17:43:20 PDT
(In reply to Darin Adler from
comment #4
)
> Comment on
attachment 424418
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=424418&action=review
> > > Source/WTF/ChangeLog:10 > > + Use RELEASE_LOG() instead of WTFLogAlways() to log memory pressure events, so that they don't > > + show on stdout in the performance tests and make them fail. > > Does this still achieve what we want in production builds?
We will see the logging is os_log which I believe is suitable for such logging.
EWS
Comment 6
2021-03-26 18:00:40 PDT
Committed
r275125
: <
https://commits.webkit.org/r275125
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 424418
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug