REGRESSION (r275038?): Perf test IndexedDB/stress/large-binary-keys.html failing with logging about memory pressure events https://bugs.webkit.org/show_bug.cgi?id=223826 <rdar://problem/75906134>

Reviewed by Darin Adler.

Use RELEASE_LOG() instead of WTFLogAlways() to log memory pressure events, so that they don't
show on stdout in the performance tests and make them fail.

* wtf/cocoa/MemoryPressureHandlerCocoa.mm:
(WTF::MemoryPressureHandler::install):


Canonical link: https://commits.webkit.org/235830@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@275125 268f45cc-cd09-0410-ab3c-d52691b4dbfc