Source/WTF/wtf/cocoa/MemoryPressureHandlerCocoa.mm
@@ -37,7 +37,15 @@
 
 extern "C" void cache_simulate_memory_warning_event(uint64_t);
 
+#define LOG_CHANNEL_PREFIX Log
+
 namespace WTF {
+
+#if RELEASE_LOG_DISABLED
+WTFLogChannel LogPerformanceLogging = { WTFLogChannelState::On, "PerformanceLogging", WTFLogLevel::Error };
+#else
+WTFLogChannel LogPerformanceLogging = { WTFLogChannelState::On, "PerformanceLogging", WTFLogLevel::Error, LOG_CHANNEL_WEBKIT_SUBSYSTEM, OS_LOG_DEFAULT };
+#endif
 
 void MemoryPressureHandler::platformReleaseMemory(Critical critical)
 {
@@ -96,7 +104,7 @@ void MemoryPressureHandler::install()
                 break;
             }
             if (m_shouldLogMemoryMemoryPressureEvents)
-                WTFLogAlways("Received memory pressure event %lu vm pressure %d", status, isUnderMemoryPressure());
+                RELEASE_LOG(PerformanceLogging, "Received memory pressure event %lu vm pressure %d", status, isUnderMemoryPressure());
         });
         dispatch_resume(memoryPressureEventSource);
     });
@@ -202,3 +210,5 @@ Optional<MemoryPressureHandler::ReliefLogger::MemoryUsage> MemoryPressureHandler
 }
 
 } // namespace WTF
+
+#undef LOG_CHANNEL_PREFIX
